Update: Landing page

--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -15,8 +15,9 @@
 }
 
 .products-content {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
   align-items: center;
   justify-content: center;
   gap: 2rem;
