--- a/src/pages/careers/careers.css
+++ b/src/pages/careers/careers.css
@@ -20,7 +20,7 @@
   position: relative;
   justify-content: space-evenly;
   display: grid;
-  grid-template-columns: repeat(3, 30%);
+  grid-template-columns: repeat(auto-fill, minmax(28rem, 1fr));
 }
 
 .open-positions .position {
@@ -30,6 +30,7 @@
   gap: 1rem;
   border-radius: 8px;
   box-shadow: 0 2px 4px 0px #d8d7d7;
+  max-width: 30rem;
 }
 
 .open-positions div .title {
@@ -48,7 +49,7 @@
   background-color: #fff;
   border: 1px solid gray;
   border-radius: 4px;
-  width: fit-content;
+  width: fill-content;
   color: var(--text-color);
 }
 
@@ -61,24 +62,10 @@
   color: green;
 }
 
-/* Medium Size */
-@media screen and (max-width: 992px) {
-  .open-positions {
-    grid-template-columns: repeat(3, 32%);
-  }
-}
-
-/* Tablet Size */
-@media screen and (max-width: 768px) {
-  .open-positions {
-    grid-template-columns: repeat(2, 45%);
-  }
-}
-
 /* Small Size */
 @media screen and (max-width: 576px) {
   .open-positions {
-    grid-template-columns: repeat(1, 95%);
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     gap: 8px;
   }
 
