--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,19 @@ body {
   flex-direction: column;
 }
 
+.select-btn {
+  background-color: #f4f4f4;
+  color: #000;
+  padding: 1.8rem;
+  min-width: 10rem;
+  transition: color background-color 0.3s ease-in-out;
+}
+
+.select-btn:hover {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
 /* Medium Size */
 @media screen and (max-width: 992px) {
 }
