--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --primary-color: #0072bb;
   --secondary-color: #f35e19;
   /* --text-color: #4c516d; */
-  --text-color: rgb(51, 51, 51);
+  --text-color: #333333;
   --text-dark: black;
   /* --background-color:#e3e9f7; */
   --background-color: #fff;
